Migrate core cache value APIs from records