@@ -1,17 +1,26 @@
 package org.nexary.core.context;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 
 /** Describes traffic identity for routing, observation, and future isolation policies. */
-public record TrafficTag(Channel channel, Priority priority, String tenant, String bizKey, Map<String, String> attributes) {
-    public TrafficTag {
-        channel = channel == null ? Channel.ONLINE : channel;
-        priority = priority == null ? Priority.NORMAL : priority;
-        tenant = normalize(tenant, "default");
-        bizKey = normalize(bizKey, "default");
-        attributes = attributes == null ? Map.of() : Map.copyOf(attributes);
+public final class TrafficTag {
+    private final Channel channel;
+    private final Priority priority;
+    private final String tenant;
+    private final String bizKey;
+    private final Map<String, String> attributes;
+
+    public TrafficTag(Channel channel, Priority priority, String tenant, String bizKey, Map<String, String> attributes) {
+        this.channel = channel == null ? Channel.ONLINE : channel;
+        this.priority = priority == null ? Priority.NORMAL : priority;
+        this.tenant = normalize(tenant, "default");
+        this.bizKey = normalize(bizKey, "default");
+        this.attributes = attributes == null
+                ? Collections.emptyMap()
+                : Collections.unmodifiableMap(new LinkedHashMap<>(attributes));
     }
 
     /** Creates a default online traffic tag. */
@@ -25,7 +34,63 @@ public record TrafficTag(Channel channel, Priority priority, String tenant, Stri
     }
 
     private static String normalize(String value, String fallback) {
-        return value == null || value.isBlank() ? fallback : value;
+        return value == null || value.trim().isEmpty() ? fallback : value;
+    }
+
+    /** Returns the traffic channel. */
+    public Channel channel() {
+        return channel;
+    }
+
+    /** Returns the traffic priority. */
+    public Priority priority() {
+        return priority;
+    }
+
+    /** Returns the tenant identifier. */
+    public String tenant() {
+        return tenant;
+    }
+
+    /** Returns the business key. */
+    public String bizKey() {
+        return bizKey;
+    }
+
+    /** Returns immutable extra traffic attributes. */
+    public Map<String, String> attributes() {
+        return attributes;
+    }
+
+    @Override
+    public boolean equals(Object other) {
+        if (this == other) {
+            return true;
+        }
+        if (!(other instanceof TrafficTag)) {
+            return false;
+        }
+        TrafficTag that = (TrafficTag) other;
+        return channel == that.channel
+                && priority == that.priority
+                && tenant.equals(that.tenant)
+                && bizKey.equals(that.bizKey)
+                && attributes.equals(that.attributes);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(channel, priority, tenant, bizKey, attributes);
+    }
+
+    @Override
+    public String toString() {
+        return "TrafficTag[channel=" + channel
+                + ", priority=" + priority
+                + ", tenant=" + tenant
+                + ", bizKey=" + bizKey
+                + ", attributes=" + attributes
+                + ']';
     }
 
     /** Traffic channel. */
